# engram

./: .env.example  .gitignore  CHATGPT_SETUP.md  GEMINI_SETUP.md  IMPLEMENTATION_LOG.md  LICENSE  README.md  claude_desktop_config.json  pyproject.toml
chatgpt_integration/: action_spec.json  setup_guide.md  system_prompt.md
engram-website/: package-lock.json  package.json
engram-website/src/app/: globals.css  layout.tsx  page.tsx
gemini_integration/: settings_snippet.json  setup_guide.md  system_prompt.md
scripts/: latency_benchmark.py  seed_sample_data.py  setup_schema.py  verify_schema.py
src/memory/: __init__.py  config.py  exceptions.py  mcp_server.py  mcp_server_http.py  mcp_tools.py
src/memory/adapters/: __init__.py  base.py  chatgpt.py  claude.py  copilot.py  gemini.py  grok.py  normalizer.py
src/memory/api/: dependencies.py  limiter.py  main.py
src/memory/auth/: __init__.py  jwt_handler.py  revocation.py
src/memory/db/: __init__.py  connection.py
src/memory/models/: __init__.py  message.py  requests.py
src/memory/services/: __init__.py  delete_service.py  embedding_service.py  query_service.py  read_service.py  segment_service.py  usage_service.py  write_service.py
tests/: test_adapters.py  test_chatgpt_integration.py  test_chunk_cascade_delete.py  test_connection.py  test_delete_api.py  test_embedding_pipeline.py  test_end_to_end.py  test_gemini_integration.py  test_mcp_http_server.py  test_mcp_server.py  test_phase6_hardening.py  test_query_api.py  test_read_api.py  test_token_revocation.py  test_write_api.py  test_write_retry.py
(+24 files in other folders)
