[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross-llm-memory"
version = "0.4.0"
description = "Cross-LLM unified memory system — verbatim conversation storage and retrieval on Neo4j"
requires-python = ">=3.11"
dependencies = [
    # Database
    "neo4j>=5.19.0",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # API server (Phase 1+)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Embeddings (Phase 2+)
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    # Cache (Phase 2+)
    "redis>=5.0.0",
    # Auth (Phase 1+)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # CLI output for scripts
    "rich>=13.7.0",
    # Rate limiting (Phase 3+)
    "slowapi>=0.1.9",
    # MCP server (Phase 4+)
    "mcp>=1.0.0",
]

[project.scripts]
engram-mcp = "memory.mcp_server:run"
engram-mcp-http = "memory.mcp_server_http:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
